# gba-experiments

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
clock/: Makefile  clock.cc  gba.h  numbers.h  types.h
examples/: CMakeLists.txt
examples/clock/: clock.cc
examples/hello-world/: hello-world.cc
examples/snake/: types.h
examples/sound/: main.cc
examples/space-shooter/: main.cc
examples/sprites/: chicken.inc  sprites.cc
examples/spritesheet/: foo.json  main.cc  spritesheet.inc  tilemap.inc
examples/tiles/: tiles.cc
libgba/: gba.h  noop_libc.c
snake/: Makefile  snake.cc
tools/: prepare-tilemaps
tools/img2bytes/: img2bytes.py
